# Cassandra-C-Server-Kit

./: .clang-format  CMakeLists.txt  README.md  library.cpp  library.h
include/cqlsvrkit/: cqlsvrkit.hpp  error.hpp  rpc_base.hpp  rpc_v4.hpp  socket.hpp  types.hpp
include/cqlsvrkit/detail/: convert.hpp
include/cqlsvrkit/tcp/: server.hpp  socket.hpp
include/cqlsvrkit/tcp/detail/: byte.hpp  data_convert.hpp
include/cqlsvrkit/types/: common.hpp  header.hpp  option.hpp  query.hpp  result.hpp  startup.hpp  supported.hpp  value.hpp
include/cqlsvrkit/types/result/: rows.hpp
sample/: sample.cpp
src/: convert.cpp  rpc_base.cpp  rpc_v4.cpp  types.cpp  types_query.cpp  types_result.cpp  types_supported.cpp  types_value.cpp
